--- a/TD4/appsettings.json
+++ b/TD4/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=FilmsratingsDB;Username=postgres;Password=postgres"
+  }
 }
